force-app/main/default/objects/ATT_EXP__Folder__c/ATT_EXP__Folder__c.object-meta.xml
<CustomObject>
    <description>Folders which can contain Attachments and other sub folders.</description>
    <label>Folder</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>