force-app/main/default/objects/ATT_EXP__Folder__c/fields/ATT_EXP__Account__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account under which this folder should be displayed.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Folders</relationshipLabel>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>