force-app/main/default/objects/ATT_EXP__Folder__c/fields/ATT_EXP__Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Parent_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Folder under which this folder is listed as a sub folder. If no Parent folder is specified current folder will be treated as root folder.</description>
    <label>Parent Folder</label>
    <referenceTo>ATT_EXP__Folder__c</referenceTo>
    <relationshipLabel>Folders</relationshipLabel>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>