force-app/main/default/objects/ATT_EXP__Folder__c/fields/ATT_EXP__Parent_Record_Path__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Parent_Record_Path__c</fullName>
    <description>Path of the parent record under which this folder should be placed.</description>
    <label>Parent Record Path</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>