force-app/main/default/objects/ATT_EXP__Folder__c/fields/ATT_EXP__Path__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Path__c</fullName>
    <description>Text of the absolute path of current folder</description>
    <label>Path</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>