force-app/main/default/objects/ATT_EXP__Folder__c/listViews/ATT_EXP__All.listView-meta.xml
<ListView>
    <fullName>ATT_EXP__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>